fix(mobile-menu.tsx): fix scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
 
 @layer base {
+  html {
+    scroll-behavior: smooth;
+  }
+
   body {
     background-color: black;
     font-family: "Roboto", sans-serif;
